--- a/assests_digicertSSL/css/style.css
+++ b/assests_digicertSSL/css/style.css
@@ -2,17 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body {
     margin: 0;
-    padding: 0;
-    font-size: 15px;
+    padding: 0;   
     box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
+   font-family: "Poppins", sans-serif;
+}
+html{
+   font-size: 15px;
 }
 
-nav {
-  /* font-family: "Lato", sans-serif; */
-    /* font-family: "Poppins", sans-serif; */
-    font-weight: 300;    
-   }
+
 .navbar-nav a{
     font-size: 1rem;
     font-weight: 400;
@@ -25,6 +23,7 @@ nav {
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 2px;
+    
 }
 
 .navbtn:hover{
@@ -91,7 +90,8 @@ nav {
 }
 footer {
     height: auto;
-    background-color: #2f4e7e;
+    /* background-color: #2f4e7e; */
+    background-color: #000000;
     /* background-image: linear-gradient(82deg, rgb(150, 93, 232) 0%, rgb(107, 89, 237) 100%); */
     padding: 1.2rem 0rem;
 }
@@ -365,6 +365,13 @@ h1 h2 h3 h4 h5 h6{
   align-items: center;
   height: 70px;
 }
+.logo-content  i {
+  /* color: #fe5f2a; */
+  font-weight: 600;
+  /* font-size: 1.2rem; */
+  vertical-align: center;
+}
+
 .logo-content {
   display: flex;
   flex-direction: row;
@@ -385,14 +392,28 @@ h1 h2 h3 h4 h5 h6{
     
 }
 .logo-content ul{
-  padding-top: 1.2rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  
+  display: grid;
+  /* justify-content: baseline; */
   align-items: center;
+}
+.ulset{
+  display: grid !important;
+  align-items: center !important;
+ margin-bottom: 0rem;
+
+}
+ ul.ulset{
+  padding: 2px !important; 
+}
+.ulset a{
+  font-size: 0.9rem !important;
 }
 .supprtnum a{
   text-decoration: none;
+}
+.supprtnum a:hover{
+  color: #000;
 }
 
 @media  (max-width: 600px) {
@@ -400,6 +421,15 @@ h1 h2 h3 h4 h5 h6{
 display: none;
   }
 }
+.head_paragraph .textNav{
+  font-size: 0.9rem;
+}
+@media (max-width:1200px) {
+  .head_paragraph .textNav{
+  display: none;
+}
+}
+
   /* nabar upper */
   .textNav  {
     margin-left: 15px;
@@ -560,3 +590,277 @@ footer,.footer-section{
   display: none;
   z-index: 100;
 }
+
+
+/* command line */
+
+.cmd_line_code{
+   background-color: #000000;
+   margin: 0.4rem 0;
+}
+.git-bash{
+   background-color: #2a2929;
+   color: #bbbbbb;
+   padding: 0.3rem .7rem;
+}
+.cmd_line_text{
+  color: #ffffff;
+  font-size: 16px;
+  padding: 0.5rem 1rem;
+}
+
+/* whatsaap css app */
+.whatsap_button {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.9;
+  transition: all 0.5s;
+  z-index: 300;
+}
+.whatsap_button:hover {
+  opacity: 1;
+  transition: all 0.5s;
+}
+.whatsap_button .float {
+  position: fixed;
+  width: 45px;
+  height: 45px;
+  bottom: 68px;
+  right: 16px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 20px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 300;
+  display: grid;
+  animation: blink 1s infinite;
+}
+.whatsap_button .float:hover {
+  filter: grayscale(0);
+}
+.whatsap_button .call_icon {
+  transition: all 0.5s;
+  background-color: #0787bd;
+}
+.whatsap_button .call_icon:hover .bi-telephone-fill {
+  transform: rotate(135deg);
+  transition: all 0.5s;
+}
+.whatsap_button .top-1 {
+  bottom: 120px;
+}
+.whatsap_button .my-float {
+  align-self: center;
+}
+@keyframes blink {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+
+
+/*--------------------------------------------------------------
+# Services Section
+--------------------------------------------------------------*/
+#services{
+  margin: 0rem 0;
+}
+#services .section-title{
+  padding: 0rem 0 3rem 0;
+  display: grid;
+  justify-content: center;
+  
+}
+.section-title h2 {
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: 700;
+    padding: 4px 20px;
+    margin: 0;
+    text-align: center;
+    color: #4154f1;
+    /* background-color: #edecfc; */
+    text-transform: uppercase;
+    border-radius: 50px;
+    
+}
+.section-title p {
+    color: #012970;
+    margin: 10px 0 0 0;
+    font-size: 32px;
+    font-weight: 700;
+    font-family: var(--heading-font);
+}
+.services .service-item {
+  box-shadow: 0px 0 20px rgba(0, 0, 0, 0.066);
+  height: 100%;
+  padding: 60px 30px;
+  text-align: center;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+.service-item a{
+  text-decoration: none;
+}
+
+.services .service-item .icon {
+  font-size: 36px;
+  padding: 20px 20px;
+  border-radius: 4px;
+  position: relative;
+  margin-bottom: 25px;
+  display: inline-block;
+  line-height: 0;
+  transition: 0.3s;
+}
+
+.services .service-item h3 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.services .service-item .read-more {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 8px 20px;
+}
+
+.services .service-item .read-more i {
+  line-height: 0;
+  margin-left: 5px;
+  font-size: 18px;
+}
+
+.services .service-item.item-cyan {
+  border-bottom: 3px solid #0dcaf0;
+}
+
+.services .service-item.item-cyan .icon {
+  color: #0dcaf0;
+  background: rgba(13, 202, 240, 0.1);
+}
+
+.services .service-item.item-cyan .read-more {
+  color: #0dcaf0;
+}
+
+.services .service-item.item-cyan:hover {
+  background: #0dcaf0;
+}
+
+.services .service-item.item-orange {
+  border-bottom: 3px solid #fd7e14;
+}
+
+.services .service-item.item-orange .icon {
+  color: #fd7e14;
+  background: rgba(253, 126, 20, 0.1);
+}
+
+.services .service-item.item-orange .read-more {
+  color: #fd7e14;
+}
+
+.services .service-item.item-orange:hover {
+  background: #fd7e14;
+}
+
+.services .service-item.item-teal {
+  border-bottom: 3px solid #20c997;
+}
+
+.services .service-item.item-teal .icon {
+  color: #20c997;
+  background: rgba(32, 201, 151, 0.1);
+}
+
+.services .service-item.item-teal .read-more {
+  color: #20c997;
+}
+
+.services .service-item.item-teal:hover {
+  background: #20c997;
+}
+
+.services .service-item.item-red {
+  border-bottom: 3px solid #df1529;
+}
+
+.services .service-item.item-red .icon {
+  color: #df1529;
+  background: rgba(223, 21, 4, 0.1);
+}
+
+.services .service-item.item-red .read-more {
+  color: #df1529;
+}
+
+.services .service-item.item-red:hover {
+  background: #df1529;
+}
+
+.services .service-item.item-indigo {
+  border-bottom: 3px solid #6610f2;
+}
+
+.services .service-item.item-indigo .icon {
+  color: #6610f2;
+  background: rgba(102, 16, 242, 0.1);
+}
+
+.services .service-item.item-indigo .read-more {
+  color: #6610f2;
+}
+
+.services .service-item.item-indigo:hover {
+  background: #6610f2;
+}
+
+.services .service-item.item-pink {
+  border-bottom: 3px solid #f3268c;
+}
+
+.services .service-item.item-pink .icon {
+  color: #f3268c;
+  background: rgba(243, 38, 140, 0.1);
+}
+
+.services .service-item.item-pink .read-more {
+  color: #f3268c;
+}
+
+.services .service-item.item-pink:hover {
+  background: #f3268c;
+}
+
+.services .service-item:hover h3,
+.services .service-item:hover p,
+.services .service-item:hover .read-more {
+  color: #fff;
+}
+
+.services .service-item:hover .icon {
+  background: #fff;
+}
+
+
+#services{
+  padding: 2rem 0;
+}
+
+/*--------------------------------------------------------------
+# Sections General
+--------------------------------------------------------------*/
