--- a/assests_digicertSSL/scss/main.scss
+++ b/assests_digicertSSL/scss/main.scss
@@ -62,10 +62,10 @@ $one_two_three_color :rgb(255 89 18);
 
 .background_random {
     //  background-color: rgba(147, 168, 157, 0.597) !important;
-   background: linear-gradient(to right, rgb(25 26 52), rgb(0 0 0 / 66%)), url(../img/window-vps-hosting/bg.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+//    background: linear-gradient(to right, rgb(25 26 52), rgb(0 0 0 / 66%)), url(../img/window-vps-hosting/bg.jpg);
+//     background-size: cover;
+//     background-position: center;
+//     background-repeat: no-repeat;
     // height: 100%;
     // display: grid;
     // justify-content: center;
@@ -249,7 +249,7 @@ $one_two_three_color :rgb(255 89 18);
 
         h2 {
             font-size: 3.7rem;
-            color: #f4ff64;
+            color: #2e2e2e;
             font-weight: 700;
 
             span {
@@ -268,7 +268,7 @@ $one_two_three_color :rgb(255 89 18);
 
             h2 {
                 span {
-                    color: rgb(255, 255, 255);
+                    color:rgb(231 113 0);
                 }
             }
 
