--- a/assests_digicertSSL/scss/main.scss
+++ b/assests_digicertSSL/scss/main.scss
@@ -60,17 +60,17 @@ $one_two_three_color :rgb(255 89 18);
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.288);
 }
 
-.background_random {
-    //  background-color: rgba(147, 168, 157, 0.597) !important;
-//    background: linear-gradient(to right, rgb(25 26 52), rgb(0 0 0 / 66%)), url(../img/window-vps-hosting/bg.jpg);
-//     background-size: cover;
-//     background-position: center;
-//     background-repeat: no-repeat;
-    // height: 100%;
-    // display: grid;
-    // justify-content: center;
-    // align-items: center;
-}
+// .background_random {
+//     //  background-color: rgba(147, 168, 157, 0.597) !important;
+// //    background: linear-gradient(to right, rgb(25 26 52), rgb(0 0 0 / 66%)), url(../img/window-vps-hosting/bg.jpg);
+// //     background-size: cover;
+// //     background-position: center;
+// //     background-repeat: no-repeat;
+//     // height: 100%;
+//     // display: grid;
+//     // justify-content: center;
+//     // align-items: center;
+// }
 
 .logo-vertical {
     i {
