--- a/assests_digicertSSL/css/style.css
+++ b/assests_digicertSSL/css/style.css
@@ -698,9 +698,11 @@ footer,.footer-section{
     color: #012970;
     margin: 10px 0 0 0;
     font-size: 32px;
-    font-weight: 700;
+    font-weight: 600;
     font-family: var(--heading-font);
 }
+
+
 .services .service-item {
   box-shadow: 0px 0 20px rgba(0, 0, 0, 0.066);
   height: 100%;
@@ -860,7 +862,16 @@ footer,.footer-section{
 #services{
   padding: 2rem 0;
 }
-
+@media screen and (max-width: 576px) {
+  .section-title p{
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .services .service-item h3{
+    font-weight: 500;
+    font-size: 22px;
+  }
+}
 
 
 
