--- a/assests_digicertSSL/scss/main.scss
+++ b/assests_digicertSSL/scss/main.scss
@@ -30,14 +30,18 @@ h6 {
 
 html{
     scroll-behavior: smooth;
-    font-size: 10px;
-    text-align: left;
+    font-size:62.5%;
+    overflow-x: hidden;
+   
 }
 
 body {
     // font-family: "Montserrat", sans-serif;
     font-family: "Roboto Condensed", sans-serif;
     //  font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+overflow-x: hidden;
+
 }
 
 
